updated the Utils and readme updater